#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.



#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
#	Don't forget to register new files here!
#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

EXTRA_DIST = \
	alpha_between_r1_r2.m \
	cyl2cart.m \
        do_1gridbox_2d_geom.m \
	geomtan2za.m \
	hseCalc.m \
	invplanck.m \
	invrayjean.m \
	nd2vmr.m \
	planck.m \
	ppath_2d_3d.m \
	psurface_crossing.m \
	tilt_of_psurface.m \
	vmr2nd.m \
	wgs84.m \
	za2geomtan.m \
	za_geom2other_point.m
