#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.



#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
#	Don't forget to register new files here!
#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

EXTRA_DIST = \
	ax_set.m \
	axes_1xn.m \
	axes_nx1.m \
	fig_size.m \
	lpr.m \
	mkfig_1gridbox_2d.m \
	mkfig_ppath_2d.m \
	pline.m \
	plineleg.m \
	plot_1gridbox_2d.m \
	plot_atm_2d.m \
	plot_ppath.m \
	plot_psurface.m \
	suptitle.m \
	text2.m \
	text3.m \
	title2.m \
	xlabel2.m \
	ylabel2.m \
	zlabel2.m
